<resources>
    <string name="app_name">Elm Lab</string>
    <string name="privacyPolicyURL">https://phyphox.org/privacy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_experiment">Elm Lab</string>
    <string name="experimentsPhyphoxOrg">Experiment ideas and instructions</string>
    <string name="experimentsPhyphoxOrgURL">http://phyphox.org/experiments</string>
    <string name="faqPhyphoxOrg">Frequently asked questions</string>
    <string name="faqPhyphoxOrgURL">http://phyphox.org/faq</string>
    <string name="error">Error</string>
    <string name="invalidValue">Invalid Value</string>
    <string name="generalErrorDialog">An error has occurred.</string>
    <string name="help">Help and info</string>
    <string name="translationToWebsiteURL">http://phyphox.org/languages#en</string>
    <string name="deviceInfo">Device info</string>
    <string name="copyToClipboard">Copy to clipboard</string>
    <string name="deviceInfoCopied">The device info has been copied to your clipboard.</string>
    <string name="warning">Warning</string>
    <string name="donotshowagain">Do not show again</string>
    <string name="damageWarning">Please be careful not to damage your phone while experimenting. Please take special care to avoid dropping it on hard surfaces and do not expose it to excessive magnetic fields. The authors of Elm Lab are not responsible for any damage to your phone.</string>
    <string name="info">Info</string>
    <string name="ok">OK</string>
    <string name="tryagain">Try again</string>
    <string name="doContinue">Continue</string>
    <string name="close">Close</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="unknown">unknown</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="confirmDelete">Do you want to delete this experiment from your collection?</string>
    <string name="confirmDeleteTitle">Confirm delete?</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="clear_data">Clear data</string>
    <string name="clear_data_question">Clear recorded data?</string>
    <string name="clear_data_question_select">Clear recorded data and the following optional items?</string>
    <string name="clear">Clear</string>
    <string name="leave_experiment">Leave experiment</string>
    <string name="leave_experiment_question">Leave this experiment and discard recorded data?</string>
    <string name="leave">Leave</string>
    <string name="timed_stop">Stop timed run</string>
    <string name="timed_start">Start timed run</string>
    <string name="loadingTitle">Loading</string>
    <string name="loadingText">Loading experiment…</string>
    <string name="loadingBluetoothConnectionText">Connecting to Bluetooth device…</string>
    <string name="timedRunDialogTitle">Timed Run</string>
    <string name="timedRunStartDelay">Start delay (s)</string>
    <string name="timedRunStopDelay">Experiment duration (s)</string>
    <string name="enableTimedRun">Do a timed run</string>
    <string name="export">Export Data</string>
    <string name="export_empty">This experiment configuration does not define any data to be exported. If this is an error, please contact the source of the QR code or configuration file.</string>
    <string name="export_subject">Data from Elm Lab</string>
    <string name="export_pick_share">Pick an export method</string>
    <string name="share">Share screenshot</string>
    <string name="download">Download</string>
    <string name="savedToDownloadsMessage">File saved to Downloads</string>
    <string name="savedToDownloadsError">Could not save the file to Downloads:</string>
    <string name="permissionRequiredToSaveToDownloads">Storage permission is needed to save files to Downloads</string>
    <string name="errorWritingStateFile">Error writing state file: </string>
    <string name="share_subject">Screenshot from Elm Lab</string>
    <string name="share_pick_share">Pick a share method</string>
    <string name="switchToPhoneLayout">View: Narrow</string>
    <string name="switchColumns1">View: 1 column</string>
    <string name="switchColumns2">View: 2 columns</string>
    <string name="switchColumns3">View: 3 columns</string>
    <string name="toggleBrightMode">Bright mode</string>
    <string name="fontSize">Font size</string>
    <string name="show_description">Experiment info</string>
    <string name="save_locally">Add experiment to collection</string>
    <string name="save_locally_done">Experiment successfully added to collection.</string>
    <string name="save_locally_message">This experiment has been opened from a remote source. Do you want to add it to your experiment collection?</string>
    <string name="save_locally_button">Save to collection</string>
    <string name="save_state">Save experiment state</string>
    <string name="save_state_category">Saved experiment states</string>
    <string name="save_state_message">You can save the state of this experiment including your data to your collection or share it with a third-party app.</string>
    <string name="save_state_title">Title</string>
    <string name="save_state_save">To collection</string>
    <string name="save_state_share">Share</string>
    <string name="save_state_subject">Experiment state for Elm Lab</string>
    <string name="save_state_default_title">Measurement</string>
    <string name="save_state_success">State has been saved to your collection.</string>
    <string name="open_zip_title">Opening a set of experiments</string>
    <string name="open_zip_dialog_instructions">This resource contains multiple experiments. You can either pick one to open it and optionally save it to your collection or use the button below to save them all to your collection at once.</string>
    <string name="open_save_all">Save all</string>
    <string name="open_bluetooth_assets_title">Experiments for Bluetooth device</string>
    <string name="open_bluetooth_assets">The following experiments for your device are available from Elm Lab. You can either just open and use them or add them all to your collection to easily access them from the main menu.</string>
    <string name="timedRun">Timed run</string>
    <string name="pick_exportSets">Pick the data sets to export.</string>
    <string name="pick_exportFormat">Choose the data format.</string>
    <string name="noDrawableData">No drawable data.</string>
    <string name="categoryNewExperiment">Simple custom experiments</string>
    <string name="categoryRawSensor">Raw Sensors</string>
    <string name="categoryPhyphoxOrg">Contribute to phyphox</string>
    <string name="categoryPhyphoxOrgHint">There are new options to support phyphox at the bottom of the list.</string>
    <string name="experimentinfo_hint">Check experiment info to learn how to use this experiment.</string>
    <string name="start_hint">Touch the triangle to start the experiment.</string>
    <string name="timedRunBeeps">Acoustic signals</string>
    <string name="beeperCountdown">Countdown sounds</string>
    <string name="beeperStart">Start sound</string>
    <string name="beeperRunning">Running sounds</string>
    <string name="beeperStop">Stop sound</string>
    <string name="activate_all">Activate all</string>
    <string name="deactivate_all">Deactivate all</string>
    <string name="warning_photosensitivity">Photosensitivity Warning</string>
    <string name="warning_photosensitivity_message">This experiment may produce high-frequency light pulses. It may trigger discomfort or seizures for individuals with photosensitive epilepsy.
\n
\nAvoid staring directly at the light source.</string>
    <string name="device_overheating">Device Overheating</string>
    <string name="device_heating_serious">The device is getting very warm. The flashlight has been turned off to cool down.</string>
    <string name="graph_tools_pan_and_zoom">Pan and zoom</string>
    <string name="graph_tools_pick">Pick data</string>
    <string name="graph_tools_more">More tools</string>
    <string name="graph_tools_system_time">Convert to system time</string>
    <string name="graph_tools_reset">Reset zoom</string>
    <string name="graph_tools_follow">Follow new data</string>
    <string name="graph_tools_linear_fit">Linear fit</string>
    <string name="graph_tools_export">Export this dataset</string>
    <string name="graph_tools_log_x">Logarithmic x axis</string>
    <string name="graph_tools_log_y">Logarithmic y axis</string>
    <string name="graph_point_label">Point</string>
    <string name="graph_slope_label">Slope</string>
    <string name="graph_difference_label">Difference</string>
    <string name="graph_fit_label">Linear fit: y = a x + b</string>
    <string name="graph_no_data">No data</string>
    <string name="graph_no_valid_data">No valid data</string>
    <string name="graph_no_data_in_range">No data in range</string>
    <string name="spectrum_orientation">Orientation</string>
    <string name="which_spectrum_orientation">What is your device\'s orientation in regard to the spectrum?</string>
    <string name="portrait_orientation">Portrait</string>
    <string name="landscape_orientation">Landscape</string>
    <string name="spectrum_analysis_setting">Spectrum Analysis Settings</string>
    <string name="applyZoomTitle">Apply zoom</string>
    <string name="applyZoomExplanation">As you are closing the interactive mode of this graph, you can select if you want to keep your zoom.</string>
    <string name="applyZoomAdvanced">Advanced options</string>
    <string name="applyZoomApply">Apply to…</string>
    <string name="applyZoomReset">Reset to default</string>
    <string name="applyZoomKeep">Keep as selected</string>
    <string name="applyZoomFollow">Keep and follow new data</string>
    <string name="applyZoomThis">Only this graph</string>
    <string name="applyZoomSameVariable">Other graphs: Same variable</string>
    <string name="applyZoomSameUnit">Other graphs: Same unit</string>
    <string name="applyZoomSameAxis">Other graphs: Same axis</string>
    <string name="newExperiment">Add experiments</string>
    <string name="newExperimentSimple">Add simple experiment</string>
    <string name="newExperimentPhyphoxInfo">Visit phyphox.org to create more advanced experiments including data analysis and share them with colleagues, students and friends.</string>
    <string name="newExperimentInputTitle">Title</string>
    <string name="newExperimentInputBufferSize">Buffer size (number of values to be stored)</string>
    <string name="newExperimentInputRate">Sensor rate (in Hz, 0 = as fast as possible)</string>
    <string name="newExperimentInputSensors">Active sensors</string>
    <string name="newExperimentBluetooth">Add experiment for Bluetooth device</string>
    <string name="newExperimentBluetoothErrorTitle">Bluetooth scan error</string>
    <string name="credits">Credits</string>
    <string name="networkVisitPrivacyURL">Privacy policy</string>
    <string name="remotePhyphoxOrg">Remote control help</string>
    <string name="settings">Settings</string>
    <string name="elmlabDemoHeading">Museum demonstrations</string>
    <string name="elmlabDemoChoose">Choose an experiment</string>
    <string name="elmlabDemoPressureTitle">Air pressure: head and feet</string>
    <string name="elmlabDemoPressureSub">Δp ≈ 20 Pa over your height</string>
    <string name="elmlabDemoWeightlessTitle">Weightlessness</string>
    <string name="elmlabDemoWeightlessSub">A thrown object is weightless in flight</string>
    <string name="elmlabDemoCarTitle">Car acceleration</string>
    <string name="elmlabDemoCarSub">Forward acceleration in m/s² and g</string>
    <string name="elmlabDemoSoundTitle">Speed of sound</string>
    <string name="elmlabDemoSoundSub">With two phones, right in this hall</string>
</resources>